--- a/server/package.json
+++ b/server/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "server.js",
   "scripts": {
-    "start": "node server.js",
+    "start": "cd ../client && npm run build && cd ../server && node server.js",
     "backend": "nodemon server.js",
     "dev": "concurrently \"npm run backend\" \"cd ../client && npm run start\""
   },
