--- a/client/package.json
+++ b/client/package.json
@@ -12,12 +12,15 @@
     "axios": "^0.27.2",
     "eslint-plugin-async-await": "^0.0.0",
     "express-async-handler": "^1.2.0",
+    "moment": "^2.29.4",
     "react": "^18.2.0",
+    "react-avatar": "^5.0.3",
     "react-dom": "^18.2.0",
     "react-icons": "^4.4.0",
     "react-redux": "^8.0.2",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
+    "react-toastify": "^9.0.8",
     "redux": "^4.2.0",
     "redux-promise": "^0.6.0",
     "redux-thunk": "^2.4.1",
